--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -1,14 +1,11 @@
-import SmoothIframe from '../../src/components/SmoothIframe'
 import { Tab, Tabs } from 'rspress/theme';
 
-## 🔻 API Support
+# 🔻 API Support
 
 Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and supports the following APIs
 
 <Tabs>
-            <Tab label="Loki">
-            ## ** Loki **
-            
+            <Tab label="Loki">            
             > **qryn** implements a full **Loki/LogQL** API to ingest, query and manage Logs
             
             ##### API Endpoints
@@ -38,9 +35,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             * _others_
 
             </Tab>
-            <Tab label="Prometheus">
-            ## ** Prometheus **
-            
+            <Tab label="Prometheus">            
             > **qryn** implements a full **Prometheus/PromQL** API to ingest, query and manage Metrics
             
             ##### API Endpoints
@@ -66,9 +61,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             * _others_
 
             </Tab>
-            <Tab label="Tempo">
-            ## ** Tempo **
-            
+            <Tab label="Tempo">            
             > **qryn** implements the **Tempo/TempoQL** API to ingest, query and manage Traces
             
             ##### API Endpoints
@@ -93,9 +86,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             * _others_
 
             </Tab>
-            <Tab label="Opentelemetry">
-            ## ** OTel **
-            
+            <Tab label="Opentelemetry">            
             > **qryn** implements the **Opentelemetry/OTLPPush** API to ingest Traces, Logs and Metrics
             
             ⚡ qryn is officially integrated with opentelemetry supports any log, trace or metric format
@@ -122,9 +113,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             * _others_
 
             </Tab>
-            <Tab label="Influx">
-            ## ** Influx **
-            
+            <Tab label="Influx">            
             > **qryn** implements the **Influx v2** Write API subset for ingestion of Logs _(and [metrics](metrics/ingestion#influx))_
             
             ##### API Endpoints
@@ -158,9 +147,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             > Replace the **qryn** URL from the example to match your actual deployment!
 
             </Tab>
-            <Tab label="Datadog">
-            ## ** Datadog **
-            
+            <Tab label="Datadog">            
             > **qryn** implements a **Datadog v2 Write** API subset for ingestion of Logs and Metrics
             
             ##### API Endpoints
@@ -172,9 +159,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             | Insert (Cloudflare Format) | POST         | 🟡             |🟢             | `/cf/api/v1/insert` |
 
             </Tab>
-            <Tab label="Elastic">
-            ## ** Elastic **
-            
+            <Tab label="Elastic">            
             > **qryn** implements an basic **Elastic API** subset for ingestion of JSON objects as tagged logs.
             
             ##### API Endpoints
@@ -233,9 +218,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             - _delete, update bulk actions and other APIs are not supported_
 
             </Tab>
-            <Tab label="NewRelic">
-            ## ** NewRelic **
-            
+            <Tab label="NewRelic">            
             > **qryn** implements an basic **NewRelic API** subset for ingestion of Logs
             
             ##### API Endpoints
