--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -4,6 +4,15 @@ import { Tab, Tabs } from 'rspress/theme';
 
 Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and supports the following APIs
 
+
+<Tabs>
+            <Tab label="Logs">
+            ⭐ Explore Logs using the native Loki Datasource<br/>
+            </Tab>
+</Tabs>
+
+## SOURCE
+
 <Tabs>
             <Tab label="Loki">            
             > **qryn** implements a full **Loki/LogQL** API to ingest, query and manage Logs
