--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -6,7 +6,6 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
 
 <Tabs>
             <Tab label="Loki">
-             ##### API Endpoints
             
             | **Name**             | **Type**         | **QRYN**      | **QRYN Cloud**      | **APIs.**                  |   
             |----------------------|------------------|---------------|---------------------|----------------------------|
@@ -31,6 +30,150 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             * Fluentd
             * Logstash
             * _others_
+            </Tab>
+            <Tab label="Prometheus">
+            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud**| **APIs.**                       |
+            |----------------------|--------------------|----------------|----------------|-----------------------------------|
+            | Remote Write         | POST               | 🟢             | 🟢             |  `/api/v1/prom/remote/write`<br>`/api/prom/remote/write`<br>`/prom/remote/write`<br>`/api/v1/write`       |
+            | Query Range          | GET/POST           | 🟢             | 🟢             | `/api/v1/query_range`             |
+            | Query                | GET/POST           | 🟢             | 🟢             | `/api/v1/query`                   |
+            | Labels               | GET/POST           | 🟢             | 🟢             | `/api/v1/labels`                  |
+            | Label Values         | GET/POST           | 🟢             | 🟢             | `/api/v1/label/:name/values`      |
+            | Series Values        | GET/POST           | 🟢             | 🟢             | `/api/v1/series`                  |
+            | Rules                | GET                | 🟢             | 🟢             | `/api/v1/rules`                   |
+            
+            ##### Compatible Agents
+            
+            Any Prometheus compatible client can be used with qryn without modifications
+            
+            * Grafana Agent
+            * Vector
+            * Opentelemetry
+            * Telegraf
+            * _others_
+
+            </Tab>
+            <Tab label="Tempo">
+            | **Name**             | **Type**           | **QRYN**            | **QRYN Cloud**| **APIs.**                   | 
+            |----------------------|--------------------|---------------------|---------------|-----------------------------------|
+            | Push (Tempo)         | POST               | 🟢                  | 🟢             | `/tempo/api/push`                 | 
+            | Push (Zipkin)        | POST               | 🟢                  | 🟢             | `/api/v2/spans`                   |
+            | Push (OTLP)          | POST               | 🟢                  | 🟢             | `/v1/traces` (OTLP)               |
+            | Query Traces         | GET                | 🟢                  | 🟢             | `/api/traces/{traceId}`           |
+            | Query Traces (JSON)  | GET                | 🟢                  | 🟢             | `/api/traces/{traceId}/json`      |
+            | Trace Tags           | GET                | 🟢                  | 🟢             | `/api/search/tags`                | 
+            | Trace Tag Values     | GET                | 🟢                  | 🟢             | `/api/search/tag/{name}/values`   |
+            | Push Cloud.          | POST               | 🟡                  | 🟢             | `/tempo/spans`                    |
+            
+            ##### Compatible Agents
+            
+            Any Tempo/Jaeger compatible client can be used with qryn without modifications
+            
+            * Grafana Agent
+            * Opentelemetry Collector
+            * _others_
+            </Tab>
+            <Tab label="Opentelemetry">
+            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
+            |----------------------|--------------------|----------------|----------------|---------------------------------|
+            | OTLPPush             | POST               | 🟢             |🟢             | `/v1/traces`         |
+            | OTLPLogPush          | POST               | 🟢             |🟡              | `/v1/logs`         |
+            
+            
+            #### OpenTelemetry Collector for qryn
+            
+            The [qryn otel-collector](https://github.com/metrico/otel-collector) is designed to store observability data _(Traces, Logs, Metrics)_ from multiple vendors/platforms into ClickHouse using qryn fingerprinting and table formats transparently accessible through qryn via _LogQL, PromQL, Tempo and Pyroscope_ queries.
+            
+            ##### Compatible Agents
+            
+            Any Opentelemetry compatible collector can be used with qryn without modifications
+            
+            * Grafana Agent
+            * Opentelemetry Collector
+            * _others_
+            </Tab>
+            <Tab label="Influx">
+            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
+            |----------------------|--------------------|----------------|----------------|---------------------------------|
+            | Write                | POST               | 🟢             |🟢             | `/influx/api/v2/write`<br>`/write`          |
+            | Health               | GET                | 🟢             |🟢             | `/influx/health`<br>`/health`          |
+            
+            
+            ##### Compatible Agents
+            
+            Any InfluxDB v2 compatible client can be used with qryn without modifications
+            
+            * Telegraf
+            * _others_
+            </Tab>
+            <Tab label="Datadog">
+            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
+            |----------------------|--------------------|----------------|----------------|---------------------------------|
+            | Logs                 | POST               | 🟢             |🟢             | `/api/v2/logs` |
+            | Series               | POST               | 🟢             |🟢             | `/api/v2/series`  |
+            | Insert (Cloudflare Format) | POST         | 🟡             |🟢             | `/cf/api/v1/insert` |
+
+            </Tab>
+            <Tab label="Elastic">
+            | **Name**             | **Type**           | **QRYN**      | **QRYN Cloud**| **APIs.**                   |  
+            |----------------------|--------------------|---------------|---------------|-----------------------------|
+            | Index                | POST               | 🟢             | 🟢          |  `/:target/_doc`            |
+            | Index                | POST               | 🟢             | 🟢          | `/:target/_create/:id`      |
+            | Index                | PUT                | 🟢             | 🟢          | `/:target/_doc/`            |
+            | Index                | PUT                | 🟢             | 🟢          | `/:target/_create/:id`      | 
+            | Bulk                 | POST               | 🟢             | 🟢          | `/_bulk`                    |
+            | Bulk                 | POST               | 🟢             | 🟢          | `/:target/_bulk`            |
+            
+            > The `_index` and `_id` tags are automatically added to each insert based on the API request
+            
+            #### Index API
+            ```bash
+            curl -X POST "qryn:3100/test-index/_doc/1234" -H 'Content-Type: application/json' -d'
+            ```
+            ```json
+            {
+              "message": "hello",
+              "user": "cloki"
+            }
+            ```
+            
+            #### Bulk API
+            ```json
+            { "index" : { "_index" : "test-index", "_id" : "1234" } }
+            { "message" : "hello", "user": "qryn" }
+            ```
+            ```bash
+            curl -s -H "Content-Type: application/x-ndjson" -XPOST http://qryn/_bulk --data-binary "@bulkreq"
+            ```
+            
+            > Replace the **qryn** URL from the example to match your actual deployment!
+            
+            
+            Either type will get converted to the following `LogQL` insert
+            ```json
+            {
+                  "stream": {
+                    "_index": "test-index",
+                    "_id": "1234",
+                    "type": "elastic"
+                  },
+                  "values": [
+                      [ "<unix epoch in nanoseconds>", "{\"message\": \"hello\", \"user\":\"qryn'"}" ]
+                  ]
+                }
+            ```
+            
+            ##### Notes
+            - _The implementation is not focused on speed. Bulking capacity depends on fastify settings._
+            - _A static type tag is also attached to events ingested through the elastic compatible APIs_
+            - _delete, update bulk actions and other APIs are not supported_
+
+            </Tab>
+            <Tab label="Newrelic">
+            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
+            |----------------------|--------------------|----------------|----------------|---------------------------------|
+            | [Logs](https://docs.newrelic.com/docs/logs/log-api/introduction-log-api/)| POST               | 🟢             |🟡             | `/log/v1` |
+
             </Tab>
 </Tabs>
 
