--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -29,26 +29,8 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             📦 [Fluentd](https://www.fluentd.org/)<br/>
             📦 [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)<br/>
             </Tab>
-
             <Tab label="Prometheus">
-            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud**| **APIs.**                       |
-            |----------------------|--------------------|----------------|----------------|-----------------------------------|
-            | Remote Write         | POST               | 🟢             | 🟢             |  `/api/v1/prom/remote/write`<br>`/api/prom/remote/write`<br>`/prom/remote/write`<br>`/api/v1/write`       |
-            | Query Range          | GET/POST           | 🟢             | 🟢             | `/api/v1/query_range`             |
-            | Query                | GET/POST           | 🟢             | 🟢             | `/api/v1/query`                   |
-            | Labels               | GET/POST           | 🟢             | 🟢             | `/api/v1/labels`                  |
-            | Label Values         | GET/POST           | 🟢             | 🟢             | `/api/v1/label/:name/values`      |
-            | Series Values        | GET/POST           | 🟢             | 🟢             | `/api/v1/series`                  |
-            | Rules                | GET                | 🟢             | 🟢             | `/api/v1/rules`                   |
-            
-            ##### Compatible Agents
-            
-            ⭐ Any Prometheus compatible client can be used with qryn without modifications
-            
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/)<br/>
-            📦 [Vector](https://vector.dev/)<br/>
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector)<br/>
+            ## Test
             </Tab>
  
 </Tabs>
