--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -77,7 +77,9 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             | OTLPLogPush          | POST               | 🟢             |🟡              | `/v1/logs`         |
 
             ##### Compatible Agents
-            Any Opentelemetry compatible collector can be used with qryn without modifications
+
+            ⭐ Any Opentelemetry compatible collector can be used with qryn without modifications
+
             </Tab>
             <Tab label="Influx">
             | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
@@ -90,28 +92,6 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             ⭐ Any InfluxDB v2 compatible client can be used with qryn without modifications
             
             📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/)<br/>
-            </Tab>
-            <Tab label="Datadog">
-            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
-            |----------------------|--------------------|----------------|----------------|---------------------------------|
-            | Logs                 | POST               | 🟢             |🟢             | `/api/v2/logs` |
-            | Series               | POST               | 🟢             |🟢             | `/api/v2/series`  |
-            | Insert (Cloudflare Format) | POST         | 🟡             |🟢             | `/cf/api/v1/insert` |
-            </Tab>
-            <Tab label="Elastic">
-            | **Name**             | **Type**           | **QRYN**      | **QRYN Cloud**| **APIs.**                   |  
-            |----------------------|--------------------|---------------|---------------|-----------------------------|
-            | Index                | POST               | 🟢             | 🟢          |  `/:target/_doc`            |
-            | Index                | POST               | 🟢             | 🟢          | `/:target/_create/:id`      |
-            | Index                | PUT                | 🟢             | 🟢          | `/:target/_doc/`            |
-            | Index                | PUT                | 🟢             | 🟢          | `/:target/_create/:id`      | 
-            | Bulk                 | POST               | 🟢             | 🟢          | `/_bulk`                    |
-            | Bulk                 | POST               | 🟢             | 🟢          | `/:target/_bulk`            |
-            </Tab>
-            <Tab label="Newrelic">
-            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
-            |----------------------|--------------------|----------------|----------------|---------------------------------|
-            | [Logs](https://docs.newrelic.com/docs/logs/log-api/introduction-log-api/)| POST   | 🟢    |🟡    | `/log/v1` |
             </Tab>
  
 </Tabs>
