--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -74,24 +74,11 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
             |----------------------|--------------------|----------------|----------------|---------------------------------|
             | OTLPPush             | POST               | 🟢             |🟢             | `/v1/traces`         |
-            | OTLPLogPush          | POST               | 🟢             |🟡              | `/v1/logs`         |
+            | OTLPLogPush          | POST               | 🟢             |🟢             | `/v1/logs`         |
 
             ##### Compatible Agents
 
             ⭐ Any Opentelemetry compatible collector can be used with qryn without modifications
-
-            </Tab>
-            <Tab label="Influx">
-            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
-            |----------------------|--------------------|----------------|----------------|---------------------------------|
-            | Write                | POST               | 🟢             |🟢             | `/influx/api/v2/write`<br>`/write`          |
-            | Health               | GET                | 🟢             |🟢             | `/influx/health`<br>`/health`          |
-            
-            ##### Compatible Agents
-
-            ⭐ Any InfluxDB v2 compatible client can be used with qryn without modifications
-            
-            📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/)<br/>
             </Tab>
  
 </Tabs>
