--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -82,6 +82,9 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
 
             📦 [OTEL qryn](https://github.com/metrico/otel-collector/)<br/>
             </Tab>
+            <Tab label="Influx">
+            # TEST
+            </Tab>
  
 </Tabs>
 
