--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -83,7 +83,6 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             📦 [OTEL qryn](https://github.com/metrico/otel-collector/)<br/>
             </Tab>
             <Tab label="Influx">
-            
             | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
             |----------------------|--------------------|----------------|----------------|---------------------------------|
             | Write                | POST               | 🟢             |🟢             | `/influx/api/v2/write`          |
@@ -100,7 +99,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             |----------------------|--------------------|----------------|----------------|---------------------------------|
             | Logs                 | POST               | 🟢             |🟢             | `/api/v2/logs` |
             | Series               | POST               | 🟢             |🟢             | `/api/v2/series`  |
-            | Insert (Cloudflare Format) | POST         | 🟡             |🟢             | `/cf/api/v1/insert` |
+            | Insert (Cloudflare)  | POST               | 🟡             |🟢             | `/cf/api/v1/insert` |
             </Tab>
             <Tab label="Elastic">
             | **Name**             | **Type**           | **QRYN**      | **QRYN Cloud**| **APIs.**                   |  
@@ -115,7 +114,7 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             <Tab label="Newrelic">
             | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
             |----------------------|--------------------|----------------|----------------|---------------------------------|
-            | [Logs](https://docs.newrelic.com/docs/logs/log-api/introduction-log-api/)| POST               | 🟢             |🟡             | `/log/v1` |
+            | [Logs](https://docs.newrelic.com/docs/logs/log-api/introduction-log-api/)| POST | 🟢 |🟡 | `/log/v1` |
             </Tab>
  
 </Tabs>
