--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -76,13 +76,17 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             | OTLPPush             | POST               | 🟢             |🟢             | `/v1/traces`         |
             | OTLPLogPush          | POST               | 🟢             |🟢             | `/v1/logs`         |
 
+            #### Compatible Protocols
+
+            ⭐ Supports 100s of protocols via [Opentelemetry Contribs](https://github.com/open-telemetry/opentelemetry-collector-contrib)
+
             ##### Compatible Agents
 
             ⭐ Any Opentelemetry compatible collector can be used without modifications
 
-            📦 [OTEL qryn](https://github.com/metrico/otel-collector/)<br/>
+            📦 [OTEL Collector for qryn](https://github.com/metrico/otel-collector/)<br/>
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/)<br/>
             </Tab>
-            
- 
 </Tabs>
 
