--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -88,5 +88,13 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
             📦 [Grafana Agent](https://grafana.com/docs/agent/latest/)<br/>
             </Tab>
+            <Tab label="Influx">
+            </Tab>
+            <Tab label="Elastic">
+            </Tab>
+            <Tab label="Datadog">
+            </Tab>
+            <Tab label="NewRelic">
+            </Tab>
 </Tabs>
 
