--- a/docs/docs/api.mdx
+++ b/docs/docs/api.mdx
@@ -95,6 +95,10 @@ Gigapipe is powered by an extended version of [qryn](https://qryn.dev) and suppo
             <Tab label="Datadog">
             </Tab>
             <Tab label="NewRelic">
+            | **Name**             | **Type**           | **QRYN**       | **QRYN Cloud** | **APIs.**                       |   
+            |----------------------|--------------------|----------------|----------------|---------------------------------|
+            | [Logs](https://docs.newrelic.com/docs/logs/log-api/introduction-log-api/)| POST               | 🟢             |🟡             | `/log/v1` |
+            
             </Tab>
 </Tabs>
 
